--- a/src/views/AccommodationDetail/accommodationDetail.scss
+++ b/src/views/AccommodationDetail/accommodationDetail.scss
@@ -152,6 +152,11 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    @media (min-width: 1440px) {
+      flex-direction: row;
+      gap: 76px;
+    }
   }
 
 
