--- a/src/views/AccommodationDetail/accommodationDetail.css
+++ b/src/views/AccommodationDetail/accommodationDetail.css
@@ -86,6 +86,8 @@
 @media (min-width: 1440px) {
   .accommodation-tags div {
     font-size: 14px;
+    padding: 5px 30px;
+    border-radius: 10px;
   }
 }
 .accommodation-info {
