--- a/src/views/AccommodationDetail/accommodationDetail.scss
+++ b/src/views/AccommodationDetail/accommodationDetail.scss
@@ -82,6 +82,8 @@
 
       @media (min-width: 1440px) {
         font-size: 14px;
+        padding: 5px 30px;
+        border-radius: 10px;
       }
     }
   }
