--- a/src/components/common/Dropdown/dropdown.css
+++ b/src/components/common/Dropdown/dropdown.css
@@ -2,6 +2,12 @@
   width: 100%;
   display: block;
 }
+.dropdown .mask {
+  overflow: hidden;
+  transform-origin: top;
+  max-height: 0;
+  transition: max-height 0.15s ease-out;
+}
 .dropdown-btn {
   display: flex;
   min-height: 30px;
@@ -39,6 +45,10 @@
   align-self: stretch;
   border-radius: 5px;
   background: rgba(246, 246, 246, 0.45);
+  transform-origin: top;
+  transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
+  transition-delay: 0.01s;
+  transform: translateY(-100%);
 }
 .dropdown-option p, .dropdown-option ul, .dropdown-option a {
   padding: 0;
@@ -56,6 +66,14 @@
   }
 }
 
+.dropdown.active .mask {
+  overflow: hidden;
+  transform-origin: top;
+  max-height: 110px;
+}
+.dropdown.active .dropdown-option {
+  transform: translateY(0);
+}
 .dropdown.active svg {
   transform: rotate(-180deg);
 }
