--- a/src/components/Slideshow/slideshow.scss
+++ b/src/components/Slideshow/slideshow.scss
@@ -11,6 +11,23 @@
     border-radius: 25px;
   }
 
+  &-counter {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    bottom: 24px;
+    color: #FFF;
+    text-align: center;
+    display: none;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+
+    @media (min-width: 726px) {
+      display: inline-block;
+    }
+  }
+
   img {
     width: 100%;
     height: 100%;
